--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a {
   margin: 0 auto;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.2);
-} /* почему-то all-content не прилегает к верху body, остается зазор */
+}
 
 .navigation {
   background-color: #ffffff;
@@ -76,7 +76,7 @@ a {
 .navigation__item--current a:link,
 .navigation__item--current a:visited {
   color: rgb(118, 99, 87);
-} /* Должен ли меняться текст при наведении и фокусе у ссылки на текущей страницы? Сейчас не меняется */
+} /* Должен ли меняться текст при наведении и фокусе у ссылки на текущей странице? Сейчас не меняется */
 
 .main-header {
   position: relative;
@@ -452,3 +452,124 @@ a {
 }
 
 */
+
+.hotels-list {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+}
+
+.hotels-list-item {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  padding-top: 30px;
+  border-top: 1px solid rgb(229, 229, 229);
+}
+
+.hotels-list-item:last-child {
+  border-bottom: 1px solid rgb(229, 229, 229);
+}
+
+/*
+.hotels-list-item img {
+  position: absolute;
+  left: 0px;
+}
+*/
+
+.hotels-list-item__name {
+  margin: 0;
+  padding: 0;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
+
+.hotels-list-item__name a:link,
+.hotels-list-item__name a:visited {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
+
+.hotels-list-item__name a:hover {
+  color: rgb(129, 179, 210);
+}
+
+.hotels-list-item__name a:focus,
+.hotels-list-item__name a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.hotels-list-item__info {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: normal;
+  color: rgb(51, 51, 51);
+}
+
+.hotels-list-item__button:link,
+.hotels-list-item__button:visited {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: bold;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 5px;
+  padding-bottom: 6px;
+}
+
+.hotels-list-item__button--details:link,
+.hotels-list-item__button--details:visited {
+  margin-right: 6px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(129, 179, 210);
+}
+
+.hotels-list-item__button--details:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(102, 158, 192);
+}
+
+.hotels-list-item__button--details:focus,
+.hotels-list-item__button--details:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(84, 150, 189);
+}
+
+.hotels-list-item__button--booking:link,
+.hotels-list-item__button--booking:visited {
+  color: rgb(255, 255, 255);
+  background-color: rgb(118, 99, 87);
+}
+
+.hotels-list-item__button--booking:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(96, 78, 67);
+}
+
+.hotels-list-item__button--booking:focus,
+.hotels-list-item__button--booking:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: rgb(80, 62, 51);
+}
+
+.hotels-list-item__rating {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: normal;
+  padding-left: 16px;
+  padding-right: 14px;
+  padding-top: 5px;
+  padding-bottom: 6px;
+  color: rgb(102, 102, 102);
+  background-color: rgb(242, 242, 242);
+}
